--- a/playbooks/drupal/tasks/update.yml
+++ b/playbooks/drupal/tasks/update.yml
@@ -4,24 +4,18 @@
     drush updatedb -y
     chdir={{ drupal_docroot }}
   when: "inventory_hostname == groups.webservers[0]"
-  notify:
-    - restart redis
-    - purge reverse proxy cache
+  notify: purge reverse proxy cache
 
 - name: Import staging configuration.
   command: >
     drush config-import -y staging
     chdir={{ drupal_docroot }}
   when: "inventory_hostname == groups.webservers[0]"
-  notify:
-    - restart redis
-    - purge reverse proxy cache
+  notify: purge reverse proxy cache
 
 - name: Rebuild caches.
   command: >
     drush cache-rebuild --quiet
     chdir={{ drupal_docroot }}
   when: "inventory_hostname == groups.webservers[0]"
-  notify:
-    - restart redis
-    - purge reverse proxy cache
+  notify: purge reverse proxy cache
