--- a/setup/networking/vars.yml
+++ b/setup/networking/vars.yml
@@ -19,7 +19,7 @@ mac_address_mapping:
     name: www3.pidramble.com
     ip: "10.0.1.63"
   "b8:27:eb:ea:9c:e0":
-    name: cache1.pidramble.com
+    name: www4.pidramble.com
     ip: "10.0.1.64"
   "b8:27:eb:54:0c:d1":
     name: db1.pidramble.com
