Issue #47: Moving forward towards a mostly-working single Pi Dramble release.

--- a/testing/drupal/single-pi/setup.yml
+++ b/testing/drupal/single-pi/setup.yml
@@ -1,6 +1,13 @@
 ---
 - hosts: 127.0.0.1
   connection: local
+  sudo: yes
+
+  vars_files:
+    - vars.yml
+
+  pre_tasks:
+    - include: ../../../playbooks/wheezy-backports.yml
 
   roles:
     - geerlingguy.firewall
