--- a/testing/drupal/single-pi/vars.yml
+++ b/testing/drupal/single-pi/vars.yml
@@ -1,1 +1,56 @@
 ---
+site_name: Dramble
+site_url: pidramble.com
+drupal_docroot: /var/www/drupal
+
+firewall_allowed_tcp_ports:
+  - 22
+  - 80
+
+# Nginx configuration.
+nginx_default_release: wheezy-backports # For Nginx 1.6.x instead of 1.2.x.
+nginx_worker_processes: "1" # Set to number of CPU cores on Pi.
+nginx_worker_connections: "512"
+nginx_client_max_body_size: "64m"
+nginx_keepalive_timeout: "65"
+nginx_remove_default_vhost: true
+nginx_vhosts: []
+
+# PHP configuration.
+php_webserver_daemon: "nginx"
+php_packages:
+  - php5
+  - php5-fpm
+  - php5-cli
+  - php5-common
+  - php5-curl
+  - php5-dev
+  - php5-gd
+  - php5-mcrypt
+  - php-pear
+  - php-apc
+php_enable_php_fpm: true
+php_memory_limit: "128M"
+php_max_execution_time: "240"
+php_apc_enabled_in_ini: true
+php_apc_stat: "0"
+
+drush_version: "6.6.0"
+
+# Drupal configuration.
+drupal_repo: http://git.pidramble.com/demo-drupal-8.git
+
+# The tag or branch to check out from the above git repository.
+drupal_version: "1.2.0"
+
+# User 1 credentials.
+drupal_admin_name: admin
+drupal_admin_password: secret
+
+# settings.php configuration.
+drupal_db_name: drupal
+drupal_db_username: drupal
+drupal_db_password: supersecure
+drupal_install_profile: minimal
+drupal_hash_salt: nCZ3_LdhMkzH7MidhZ3Ac4sUyIbQP2FS9upOUbppzT9EtWp_gUmR8KZffhwm8rjmTr08oWLhjQ
+drupal_site_uuid: 73ee435f-88fd-4b45-9c00-c09c54510359
