--- a/testing/drupal/single-pi/vars.yml
+++ b/testing/drupal/single-pi/vars.yml
@@ -16,6 +16,21 @@ nginx_keepalive_timeout: "65"
 nginx_remove_default_vhost: true
 nginx_vhosts: []
 
+# MySQL configuration.
+mysql_key_buffer_size: "16M"
+mysql_max_allowed_packet: "64M"
+mysql_table_open_cache: "256"
+mysql_sort_buffer_size: "1M"
+mysql_read_buffer_size: "1M"
+mysql_read_rnd_buffer_size: "2M"
+mysql_myisam_sort_buffer_size: "16M"
+mysql_thread_cache_size: "25"
+mysql_query_cache_size: "16M"
+mysql_innodb_buffer_pool_size: "64M"
+mysql_innodb_log_file_size: "8M"
+mysql_innodb_log_buffer_size: "4M"
+mysql_innodb_flush_log_at_trx_commit: "2"
+
 # PHP configuration.
 php_webserver_daemon: "nginx"
 php_packages:
