--- a/testing/drupal/single-pi/setup.yml
+++ b/testing/drupal/single-pi/setup.yml
@@ -18,3 +18,29 @@
     - geerlingguy.composer
     - geerlingguy.drush
     - geerlingguy.git
+
+  tasks:
+    - name: Copy vhost configuration into place.
+      template:
+        src: ../../../playbooks/web/templates/drupal.conf.j2
+        dest: /etc/nginx/sites-enabled/drupal.conf
+        mode: 0644
+      notify: restart nginx
+
+    - name: Copy php5-fpm www pool configuration into place.
+      template:
+        src: ../../../playbooks/web/templates/www.conf.j2
+        dest: /etc/php5/fpm/pool.d/www.conf
+        mode: 0644
+      notify: restart php-fpm
+
+    - name: Ensure dependencies are installed.
+      apt: "name={{ item }} state=present"
+      with_items:
+        # Needed to complete Drupal installation.
+        - sendmail-bin
+        - sendmail
+        # So drush can connect to MySQL.
+        - mysql-client
+
+    - include: drupal.yml
