Issue #47: Get Drupal installed (after boris/composer/drush insanity).

--- a/testing/drupal/single-pi/drupal.yml
+++ b/testing/drupal/single-pi/drupal.yml
@@ -39,7 +39,7 @@
 
 - name: Copy settings.php file into place.
   template:
-    src: ../templates/settings.php.j2
+    src: templates/settings.php.j2
     dest: "{{ drupal_docroot }}/sites/default/settings.php"
     owner: www-data
     group: www-data
