--- a/testing/drupal/single-pi/vars.yml
+++ b/testing/drupal/single-pi/vars.yml
@@ -30,6 +30,22 @@ mysql_innodb_buffer_pool_size: "64M"
 mysql_innodb_log_file_size: "8M"
 mysql_innodb_log_buffer_size: "4M"
 mysql_innodb_flush_log_at_trx_commit: "2"
+mysql_root_password: supersecure
+mysql_users:
+  - {
+    name: drupal,
+    host: "%",
+    password: supersecure,
+    priv: "drupal.*:ALL"
+  }
+
+mysql_databases:
+  - {
+    name: drupal,
+    collation: utf8_general_ci,
+    encoding: utf8,
+    replicate: 0
+  }
 
 # PHP configuration.
 php_webserver_daemon: "nginx"
@@ -50,7 +66,7 @@ php_max_execution_time: "240"
 php_apc_enabled_in_ini: true
 php_apc_stat: "0"
 
-drush_version: "6.6.0"
+drush_version: "master"
 
 # Drupal configuration.
 drupal_repo: https://github.com/geerlingguy/demo-drupal-8.git
