--- a/playbooks/balancer/balancer.yml
+++ b/playbooks/balancer/balancer.yml
@@ -18,6 +18,7 @@
 
   tasks:
     - include: git-repo.yml
+    - include: led-monitor.yml
 
     - name: Copy vhost configuration into place.
       template:
