--- a/playbooks/web/tasks/gluster.yml
+++ b/playbooks/web/tasks/gluster.yml
@@ -10,31 +10,15 @@
     - "{{ gluster_brick_dir }}"
     - "{{ gluster_mount_dir }}"
 
-# Gluster volume configuration.
-- name: Check if Gluster volumes already exist.
-  shell: "gluster volume info"
-  changed_when: false
-  register: gluster_volume_info
-
-- name: Connect to Gluster peers.
-  shell: "gluster peer probe {{ item }}"
-  register: gluster_peer_probe
-  changed_when: "'already in peer list' not in gluster_peer_probe.stdout"
-  failed_when: false
-  with_items: groups.webservers
-  when: "'Volume Name: gluster' not in gluster_volume_info.stdout"
-
-- name: Create Gluster volume.
-  shell: "gluster volume create {{ gluster_brick_name }} {{ gluster_brick_config }}"
-  register: gluster_volume_create
-  changed_when: "'successful' in gluster_volume_create.stdout"
-  when: "inventory_hostname == groups.webservers[0] and 'Volume Name: gluster' not in gluster_volume_info.stdout"
-
-- name: Ensure Gluster volume is started.
-  shell: "gluster volume start {{ gluster_brick_name }}"
-  register: gluster_volume_start
-  changed_when: "'successful' in gluster_volume_start.stdout"
-  when: "inventory_hostname == groups.webservers[0] and 'Volume Name: gluster' not in gluster_volume_info.stdout"
+- name: Configure Gluster volume.
+  gluster_volume:
+    state: present
+    name: "{{ gluster_brick_name }}"
+    brick: "{{ gluster_brick_dir }}"
+    replicas: 2
+    cluster: "{{ groups.webservers | join(',') }}"
+    host: "{{ inventory_hostname }}"
+  run_once: true
 
 # Mount configuration.
 - name: Ensure the Gluster volume is mounted.
