Fixes #54: Use Gluster 3.5.x to see if PHP's time woes go away.

--- a/playbooks/web/tasks/gluster.yml
+++ b/playbooks/web/tasks/gluster.yml
@@ -18,6 +18,7 @@
     replicas: 2
     cluster: "{{ groups.webservers | join(',') }}"
     host: "{{ inventory_hostname }}"
+    force: true
   run_once: true
 
 # Mount configuration.
