--- a/playbooks/web/web.yml
+++ b/playbooks/web/web.yml
@@ -11,14 +11,14 @@
     - include: ../wheezy-backports.yml
 
   roles:
-    - geerlingguy.firewall
-    - geerlingguy.nginx
-    - geerlingguy.php
-    - geerlingguy.drush
-    - geerlingguy.git
-    - geerlingguy.glusterfs
-    - geerlingguy.munin-node
-    - ../roles/leds
+    - { role: geerlingguy.firewall, tags: ['firewall'] }
+    - { role: geerlingguy.nginx, tags: ['nginx'] }
+    - { role: geerlingguy.php, tags: ['php'] }
+    - { role: geerlingguy.drush, tags: ['drush'] }
+    - { role: geerlingguy.git, tags: ['git'] }
+    - { role: geerlingguy.glusterfs, tags: ['gluster'] }
+    - { role: geerlingguy.munin-node, tags: ['munin-node'] }
+    - { role: ../roles/leds, tags: ['leds'] }
 
   tasks:
     - include: tasks/extras.yml
