--- a/playbooks/web/tasks/gluster.yml
+++ b/playbooks/web/tasks/gluster.yml
@@ -25,7 +25,7 @@
 - name: Ensure the Gluster volume is mounted.
   mount:
     name: "{{ gluster_mount_dir }}"
-    src: "{{ groups.webservers[0] }}:/{{ gluster_brick_name }}"
+    src: "{{ inventory_hostname }}:/{{ gluster_brick_name }}"
     fstype: glusterfs
     opts: "defaults,_netdev"
     state: mounted
