--- a/playbooks/drupal/vars/main.yml
+++ b/playbooks/drupal/vars/main.yml
@@ -6,6 +6,7 @@
 
 # Drupal configuration.
 drupal_repo: http://git.pidramble.com/demo-drupal-8.git
+drupal_deploy_strategy: git
 
 # The tag or branch to check out from the above git repository.
 drupal_version: "1.2.0"
@@ -26,5 +27,7 @@ drupal_site_uuid: 73ee435f-88fd-4b45-9c00-c09c54510359
 # Uncomment these lines to install Drupal 8 HEAD from drupal.org instead of the
 # demo Drupal 8 project. These variables will override the ones defined prior.
 drupal_repo: http://git.drupal.org/project/drupal.git
-drupal_version: 8.0.x
+# drupal_version: 8.0.0-beta10
+drupal_version: 8.0.x-dev
+drupal_deploy_strategy: tarball
 drupal_install_profile: standard # or minimal, if desired
