--- a/playbooks/web/tasks/nfs.yml
+++ b/playbooks/web/tasks/nfs.yml
@@ -14,7 +14,7 @@
 - name: Ensure the NFS volume is mounted.
   mount:
     name: "{{ nfs_mount_dir }}"
-    src: "{{ groups.webservers[0] }}:/{{ nfs_share_dir }}"
+    src: "{{ groups.webservers[0] }}:{{ nfs_share_dir }}"
     fstype: nfs
     opts: "rw,sync"
     state: mounted
