--- a/playbooks/roles/leds/meta/main.yml
+++ b/playbooks/roles/leds/meta/main.yml
@@ -5,11 +5,11 @@ galaxy_info:
   description: GPIO LED control setup for Rasbperry Pi.
   company: Midwestern Mac, LLC
   license: license (MIT)
-  min_ansible_version: 1.4
+  min_ansible_version: 1.8
   platforms:
     - name: Debian
       versions:
         - wheezy
-  categories:
-  - monitoring
-  - system
+  galaxy_tags:
+    - monitoring
+    - system
