--- a/playbooks/web/vars.yml
+++ b/playbooks/web/vars.yml
@@ -13,7 +13,6 @@ firewall_additional_rules:
   - "iptables -A INPUT -p tcp --dport 4949 -s {{ groups.balancer[0] }} -j ACCEPT"
 
 # Nginx configuration.
-nginx_default_release: wheezy-backports # For Nginx 1.6.x instead of 1.2.x.
 nginx_worker_processes: "4" # Set to number of CPU cores on Pi.
 nginx_worker_connections: "512"
 nginx_client_max_body_size: "64m"
@@ -23,14 +22,13 @@ nginx_vhosts: []
 
 # PHP configuration.
 php_install_from_source: true
-# Some example versions to try: php-5.5.27, php-5.6.11, php-7.0.0beta2.
-php_source_version: "php-5.6.11"
+# Some example versions to try: php-5.5.33, php-5.6.19, php-7.0.4.
+php_source_version: "php-7.0.4"
 php_source_make_command: "make --jobs={{ ansible_processor_count }}"
 php_source_configure_command: >
   ./configure
   --prefix={{ php_source_install_path }}
-  --with-config-file-path={{ php_conf_path }}
-  --with-config-file-scan-dir={{ php_conf_path }}/conf.d
+  --with-config-file-path={{ php_conf_paths | first }}
   --enable-mbstring
   --enable-zip
   --enable-bcmath
