--- a/playbooks/database/vars.yml
+++ b/playbooks/database/vars.yml
@@ -6,7 +6,6 @@ firewall_allowed_tcp_ports:
 firewall_additional_rules:
   - "iptables -A INPUT -p tcp --dport 3306 -s {{ groups.webservers[0] }}/24 -j ACCEPT"
   - "iptables -A INPUT -p tcp --dport 3306 -s {{ groups.webservers[1] }}/24 -j ACCEPT"
-  - "iptables -A INPUT -p tcp --dport 3306 -s {{ groups.webservers[2] }}/24 -j ACCEPT"
   - "iptables -A INPUT -p tcp --dport 4949 -s {{ groups.balancer[0] }} -j ACCEPT"
 
 mysql_root_password: supersecure
@@ -48,6 +47,12 @@ mysql_innodb_additional_mem_pool_size: "20M"
 mysql_innodb_log_file_size: "64M"
 mysql_innodb_log_buffer_size: "8M"
 mysql_innodb_flush_log_at_trx_commit: "2"
+
+# Replication settings.
+mysql_replication_master: "{{ groups.database[0] }}"
+mysql_replication_user:
+  name: 'replication'
+  password: 'supersecure'
 
 # Munin settings.
 munin_node_allowed_ips:
