--- a/playbooks/balancer/balancer.yml
+++ b/playbooks/balancer/balancer.yml
@@ -9,6 +9,7 @@
   roles:
     - { role: geerlingguy.firewall, tags: ['firewall'] }
     - { role: geerlingguy.security, tags: ['security'] }
+    - { role: geerlingguy.git, tags: ['git'] }
     - { role: geerlingguy.nginx, tags: ['nginx'] }
     - { role: geerlingguy.munin, tags: ['munin'] }
     - { role: ../roles/leds, tags: ['leds'] }
