--- a/playbooks/database/vars.yml
+++ b/playbooks/database/vars.yml
@@ -25,7 +25,7 @@ mysql_databases:
     replicate: 0
   }
 
-mysql_bind_address: "{{ groups.database[0] }}"
+mysql_bind_address: "{{ ansible_default_ipv4.address }}"
 
 # Memory settings.
 mysql_key_buffer_size: "32M"
