--- a/testing/vagrant/Vagrantfile
+++ b/testing/vagrant/Vagrantfile
@@ -7,12 +7,17 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "debian/jessie64"
   config.ssh.insert_key = false
 
+  # Set order so virtualbox provider is used unless overridden.
+  config.vm.provider "virtualbox"
+  config.vm.provider "vmware_fusion"
+
   # Balancer.
   config.vm.define "bal1" do |bal1|
     bal1.vm.network :private_network, ip: "192.168.77.2"
 
     # VirtualBox.
     bal1.vm.provider :virtualbox do |v|
+      v.linked_clone = true if Vagrant::VERSION =~ /^1.8/
       v.name = "bal1.pidramble.com"
       v.memory = 1024
       v.cpus = 4
@@ -25,6 +30,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
     # VirtualBox.
     www1.vm.provider :virtualbox do |v|
+      v.linked_clone = true if Vagrant::VERSION =~ /^1.8/
       v.name = "www1.pidramble.com"
       v.memory = 1024
       v.cpus = 1
@@ -37,6 +43,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
     # VirtualBox.
     www2.vm.provider :virtualbox do |v|
+      v.linked_clone = true if Vagrant::VERSION =~ /^1.8/
       v.name = "www2.pidramble.com"
       v.memory = 1024
       v.cpus = 1
@@ -49,6 +56,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
     # VirtualBox.
     db1.vm.provider :virtualbox do |v|
+      v.linked_clone = true if Vagrant::VERSION =~ /^1.8/
       v.name = "db1.pidramble.com"
       v.memory = 1024
       v.cpus = 1
@@ -61,6 +69,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
     # VirtualBox.
     db2.vm.provider :virtualbox do |v|
+      v.linked_clone = true if Vagrant::VERSION =~ /^1.8/
       v.name = "db2.pidramble.com"
       v.memory = 1024
       v.cpus = 1
