Fix deprecation notices in LED role.

--- a/playbooks/roles/leds/meta/main.yml
+++ b/playbooks/roles/leds/meta/main.yml
@@ -10,6 +10,7 @@ galaxy_info:
     - name: Debian
       versions:
         - wheezy
+        - jessie
   galaxy_tags:
     - monitoring
     - system
