--- a/playbooks/drupal/vars/main.yml
+++ b/playbooks/drupal/vars/main.yml
@@ -5,11 +5,11 @@
 # at the end of this file.
 
 # Drupal configuration.
-drupal_repo: http://git.pidramble.com/demo-drupal-8.git
-drupal_deploy_strategy: git
+# drupal_repo: "http://git.{{ site_url }}/demo-drupal-8.git"
+# drupal_deploy_strategy: git
 
 # The tag or branch to check out from the above git repository.
-drupal_version: "1.2.0"
+# drupal_version: "1.2.0"
 drupal_keep_updated: yes
 
 # User 1 credentials.
@@ -20,7 +20,7 @@ drupal_admin_password: admin
 drupal_db_name: drupal
 drupal_db_username: drupal
 drupal_db_password: supersecure
-drupal_install_profile: minimal
+# drupal_install_profile: minimal
 drupal_hash_salt: nCZ3_LdhMkzH7MidhZ3Ac4sUyIbQP2FS9upOUbppzT9EtWp_gUmR8KZffhwm8rjmTr08oWLhjQ
 drupal_site_uuid: 73ee435f-88fd-4b45-9c00-c09c54510359
 
