--- a/playbooks/drupal/vars/main.yml
+++ b/playbooks/drupal/vars/main.yml
@@ -1,32 +1,9 @@
 ---
 # The default configuration below installs a demonstration Drupal 8 site that
 # can be used to demonstrate initial deployment and updates to a Drupal 8 site
-# via Ansible and Drush. To install Drupal 8 HEAD instead, uncomment the lines
-# at the end of this file.
-
-# Drupal configuration.
-# drupal_repo: "http://git.{{ site_url }}/demo-drupal-8.git"
-# drupal_deploy_strategy: git
-
-# The tag or branch to check out from the above git repository.
-# drupal_version: "1.2.0"
+# via Ansible and Drush. You can override this default configuration in your
+# main config.yml in the project root.
+drupal_repo: "http://git.{{ site_url }}/demo-drupal-8.git"
+drupal_deploy_strategy: git
+drupal_version: "1.2.0"
 drupal_keep_updated: yes
-
-# User 1 credentials.
-drupal_admin_name: admin
-drupal_admin_password: admin
-
-# settings.php configuration.
-drupal_db_name: drupal
-drupal_db_username: drupal
-drupal_db_password: supersecure
-# drupal_install_profile: minimal
-drupal_hash_salt: nCZ3_LdhMkzH7MidhZ3Ac4sUyIbQP2FS9upOUbppzT9EtWp_gUmR8KZffhwm8rjmTr08oWLhjQ
-drupal_site_uuid: 73ee435f-88fd-4b45-9c00-c09c54510359
-
-# Uncomment these lines to install Drupal 8 HEAD from drupal.org instead of the
-# demo Drupal 8 project. These variables will override the ones defined prior.
-drupal_repo: http://git.drupal.org/project/drupal.git
-drupal_version: 8.0.5
-drupal_deploy_strategy: tarball
-drupal_install_profile: standard # or minimal, if desired
